# hydroqc-ha

./: CHANGELOG.md  README.md  docker-compose.yml  justfile  pyproject.toml  renovate.json5
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: blueprints.yml  ci.yml  release.yml  validate.yml
blueprints/: flex-d-calendar.yaml  winter-credits-calendar.yaml
custom_components/hydroqc/: __init__.py  binary_sensor.py  button.py  calendar_manager.py  calendar_peak_handler.py  config_flow.py  const.py  consumption_history.py  coordinator.py  manifest.json  public_data_client.py  sensor.py  services.yaml  statistics_manager.py  strings.json  utils.py
custom_components/hydroqc/config_flow/: base.py  options.py
custom_components/hydroqc/coordinator/: base.py  calendar_sync.py  consumption_sync.py  sensor_data.py
custom_components/hydroqc/public_data/: peak_handler.py
custom_components/hydroqc/translations/: en.json  es.json  fr.json
scripts/: validate_blueprints.py
tests/: conftest.py
tests/integration/: test_dcpc_schedule.py  test_dpc_peaks.py
tests/unit/: test_calendar_manager.py  test_consumption_history.py  test_coordinator.py  test_sensor.py
