[project]
name = "hydroqc-ha"
version = "0.1.0"
description = "Home Assistant custom component for Hydro-Québec"
readme = "README.md"
requires-python = ">=3.13.2"
license = { text = "Apache-2.0" }
authors = [
    { name = "Hydro-Québec HA Contributors" }
]
keywords = ["home-assistant", "hydro-quebec", "energy", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]

dependencies = [
    # Note: These dependencies are installed by Home Assistant runtime
    # They are listed here for reference but not installed in dev environment
]

[project.urls]
Homepage = "https://github.com/hydroqc/hydroqc-ha"
Repository = "https://github.com/hydroqc/hydroqc-ha"
Issues = "https://github.com/hydroqc/hydroqc-ha/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components"]

[dependency-groups]
dev = [
    "Hydro-Quebec-API-Wrapper==4.2.6",
    "homeassistant-stubs>=2025.1.0",  # Type stubs for HA API compatibility checking
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-cov>=6.0.0",
    "freezegun>=1.5.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value comparison
    "RET504",   # unnecessary assignment before return
    "SIM102",   # collapsible if
    "SIM108",   # ternary operator
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["ARG", "PLR2004"]  # allow fixtures and magic values in tests

[tool.ruff.lint.isort]
known-first-party = ["custom_components.hydroqc"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hydroqc.*"
ignore_missing_imports = true

# Note: homeassistant.* types are now checked via homeassistant-stubs
# This catches API compatibility issues at type-check time

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
